Correções de localização

--- a/.htaccess
+++ b/.htaccess
@@ -3,9 +3,22 @@ RewriteEngine On
 RewriteRule ^home index.php [NC,L]
 RewriteRule ^feed feed.php [NC,L]
 RewriteRule ^login views/login/login.php [NC,L]
+RewriteRule ^tipo-usuario views/register/pages/escolha-tipo-usuario.php [NC,L]
+
 
 RewriteRule ^cadastro-usuario views/register/pages/register-comum/formulario-usuario.php [NC,L]
 RewriteRule ^foto-usuario views/register/pages/register-comum/formulario-foto.php [NC,L]
 
 RewriteRule ^inicio-pet views/register/pages/register-comum/formulario-pet1.php [NC,L]
 RewriteRule ^formulario-pet views/register/pages/register-comum/formulario-pet2.php [NC,L]
+RewriteRule ^foto-pet views/register/pages/register-comum/formulario-foto-pet.php [NC,L]
+RewriteRule ^final-usuario views/register/pages/register-comum/finalizar-forms.php [NC,L]
+
+
+RewriteRule ^cadastro-empresa views/register/pages/register-empresa/formulario-usuario-empresa.php [NC,L]
+RewriteRule ^info-empresa views/register/pages/register-empresa/formulario-info-empresa.php [NC,L]
+RewriteRule ^ramo-empresa views/register/pages/register-empresa/formulario-ramo.php [NC,L]
+RewriteRule ^foto-empresa views/register/pages/register-empresa/formulario-foto-empresa.php [NC,L]
+RewriteRule ^final-empresa views/register/pages/register-empresa/finalizar-cadastro-empresa.php [NC,L]
+
+
