--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 RewriteRule ^home index.php [NC,L]
 RewriteRule ^feed feed.php [NC,L]
 RewriteRule ^feed sair.php [NC,L]
-
+RewriteRule ^import api/database/import-db.php [NC,L]
 RewriteRule ^login views/login/login.php [NC,L]
 RewriteRule ^tipo-usuario views/register/pages/escolha-tipo-usuario.php [NC,L]
 
