--- a/api/composer.json
+++ b/api/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "slim/slim": "^4.10",
-        "slim/psr7": "^1.5"
+        "slim/psr7": "^1.5",
+        "phpmailer/phpmailer": "^6.6"
     }
 }
