--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,17 @@
 RewriteEngine On
 
 RewriteRule ^home index.php [NC,L]
-RewriteRule ^feed feed.php [NC,L]
-RewriteRule ^feed sair.php [NC,L]
+RewriteRule ^feed views/feed/feed.php [NC,L]
+RewriteRule ^nova-feed views/feed/novaFeed.php [NC,L]
+
+RewriteRule ^meu-perfil views/perfil/perfilUsuario.php [NC,L]
+RewriteRule ^perfil views/feed/perfil.php [NC,L]
+
+
+RewriteRule ^sair sair.php [NC,L]
 RewriteRule ^import api/database/import-db.php [NC,L]
 RewriteRule ^login views/login/login.php [NC,L]
-RewriteRule ^tipo-usuario views/register/escolha-tipo-usuario.php [NC,L]
+
 
 
 RewriteRule ^categorias-dashboard private-adm/dashboard/pages/categorias/categorias.php [NC,L]
@@ -16,6 +22,7 @@ RewriteRule ^pets-dashboard private-adm/dashboard/pages/pets/pets.php [NC,L]
 RewriteRule ^tutores-dashboard private-adm/dashboard/pages/tutores/tutores.php [NC,L]
 RewriteRule ^tutorial-dashboard private-adm/dashboard/pages/tutorial/tutorial.php [NC,L]
 
+RewriteRule ^tipo-usuario views/register/escolha-tipo-usuario.php [NC,L]
 RewriteRule ^cadastro-usuario views/register/register-comum/formulario-usuario.php [NC,L]
 RewriteRule ^info-usuario views/register/register-comum/formulario-maisSobre.php [NC,L]
 RewriteRule ^foto-usuario views/register/register-comum/formulario-foto.php [NC,L]
@@ -24,7 +31,6 @@ RewriteRule ^inicio-pet views/register/register-comum/formulario-pet1.php [NC,L]
 RewriteRule ^formulario-pet views/register/register-comum/formulario-pet2.php [NC,L]
 RewriteRule ^foto-pet views/register/register-comum/formulario-foto-pet.php [NC,L]
 RewriteRule ^final-usuario views/register/register-comum/finalizar-forms.php [NC,L]
-RewriteRule ^editar views/editar-conta.php [NC,L]
 
 
 RewriteRule ^cadastro-empresa views/register/register-empresa/formulario-usuario-empresa.php [NC,L]
