--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,16 @@ RewriteEngine On
 RewriteRule ^home index.php [NC,L]
 RewriteRule ^feed views/feed/novaFeed.php [NC,L]
 
+RewriteRule ^meu-perfil-pet views/perfil/perfilPet.php [NC,L]
+
+RewriteRule ^meu-perfil-empresa views/perfil/perfilEmpresa.php [NC,L]
+
 RewriteRule ^meu-perfil views/perfil/perfilUsuario.php [NC,L]
+
+
+
+
+
 RewriteRule ^perfil views/feed/perfil.php [NC,L]
 
 
